# user_activity_control

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  build_and_deploy.yaml
app_data/strings/cyborg/: alarm.yaml  command.yaml  stand_down.yaml  templates.yaml
config/: base_settings_example.yaml  user_types_example.yaml  users_settings_example.yaml
locales/ru/: message_strings.yaml
src/user_activity_control/: __init__.py  runner.py
src/user_activity_control/bot_logic/commands/: commands.py
src/user_activity_control/bot_logic/enums/: activity_enums.py  command_enums.py  strings_type_enums.py  user_settings_enums.py
src/user_activity_control/bot_logic/filters/: chat_user_filters.py
src/user_activity_control/bot_logic/handlers/: __init__.py
src/user_activity_control/bot_logic/handlers/chat_handlers/: __init__.py  chat_activity_handlers.py  chat_command_handlers.py
src/user_activity_control/bot_logic/schemas/: control_user_schemas.py
src/user_activity_control/bot_logic/services/: text_composer_service.py  user_activity_service.py
src/user_activity_control/core/: config.py  run.py
src/user_activity_control/core/base/: singleton.py
src/user_activity_control/infra/locale/: locale_utils.py  types.py
src/user_activity_control/infra/logger/: project_logger.py  project_logger_enums.py
src/user_activity_control/infra/storage/: in_memory_storage.py
src/user_activity_control/infra/telegram/: bot_core.py
(+4 files in other folders)
